# linked-data-sparql

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
derive/: Cargo.toml
derive/src/: lib.rs
examples/: simple.rs
src/: and.rs  construct_query.rs  lib.rs  rdf_type_conversions.rs  sparql_graph_store.rs  sparql_query.rs  to_construct_query.rs  union.rs
src/construct_query/: join.rs  left_join.rs
src/sparql_graph_store/: client_sparql_graph_store.rs  oxigraph_sparql_graph_store.rs  query_result_dataset.rs  query_results.rs
tests/: Cargo.toml
tests/src/: all_tests.rs  lib.rs  rdf_type_conversions.rs  test_graph_store.rs
tests/src/all_tests/: test_complex_struct.rs  test_datatypes.rs  test_enum.rs  test_enum_blank_node.rs  test_enum_type.rs  test_hashset.rs  test_struct.rs  test_struct_flatten.rs  test_struct_graph.rs  test_struct_id.rs  test_struct_type.rs  test_struct_vec.rs  test_struct_with_option.rs
