[workspace.package]
license = "MIT"
edition = "2024"
version = "0.1.0"

[workspace]
members = ["derive", "tests"]

[package]
name = "linked-data-sparql"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SPARQL query generation for linked data"

[workspace.dependencies]
iref = "3.2.2"
spargebra = "0.3.5"

[dependencies]
iref.workspace = true
spargebra.workspace = true
linked-data-sparql-derive = { path = "derive" }
sparopt = "0.2.1"
uuid = { version = "1.16.0", features = ["v4"] }

[patch.crates-io]
linked-data-core = { path = "../linked-data-core" }
