[package]
name = "linked-data-sparql-derive"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
iref.workspace = true
linked-data-core = "0.1.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.94"
syn = { version = "2.0.100", features = ["visit"] }
quote = "1.0.40"
