[package]
name = "linked-data-sparql-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SPARQL query generation for linked data"

[lib]
proc-macro = true

[dependencies]
linked-data-core = "0.1"
proc-macro-error = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["visit"] }
quote = "1"
