[package]
name = "linked-data-sparql-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
linked-data-sparql = { path = "..", features = ["rdf12"] }
iref.workspace = true
spargebra.workspace = true
xsd-types.workspace = true
linked-data-next.workspace = true
oxttl = "0.2"
oxigraph = { version = "0.5", features = ["rdf-12"] }
rdf-types.workspace = true
